# magnitude-ae

./: .gitignore  README.md  pyproject.toml
notebooks/: MagnitudeExperiments.ipynb
scripts/: main.py
src/: utils.py
src/models/: mag_ae.py
tests/: synthetic_data.py
